<resources>
    <string name="app_name">BirthdayCardApp</string>
    <string name="to">To:</string>
    <string name="rec_name">Receiver Name</string>
    <string name="from">From:</string>
    <string name="sen_name">Sender Name</string>
    <string name="message">Message:</string>
    <string name="enter_msg">Enter message</string>
    <string name="mk_card">Make Card</string>
    <string name="back">Go Back</string>
</resources>
